src/objects/Site_Survey__c.object
<CustomObject>
    <fields>
        <fullName>e_DPA_Adequate_laptop_security_measures__c</fullName>
        <label>Adequate laptop security measures</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>e_DPA_Laptops_Stored__c</fullName>
        <label>Are laptops ever stored on site?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>e_DPA_Secure_storage_for_paper_files__c</fullName>
        <label>Secure storage for paper files?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>e_Monitored_alarm_system__c</fullName>
        <label>Monitored alarm system</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>e_Overall_security__c</fullName>
        <label>Overall security</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>f_Brand_visibility__c</fullName>
        <label>Brand visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>g_Environmental_systems__c</fullName>
        <label>Other environmental systems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>g_Recycling_policies__c</fullName>
        <label>Recycling policies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Electricity_charge_key__c</fullName>
        <label>Electricity charge key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>h_Electricity_condition__c</fullName>
        <label>Electricity condition</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Electricity_contract__c</fullName>
        <label>Electricity contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>h_Electricity_other__c</fullName>
        <label>Electricity other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>h_Electricity_provider__c</fullName>
        <label>Electricity provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>h_Fuel_Capacity_of_above_ground_tanks__c</fullName>
        <label>Capacity of above-ground tanks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>h_Fuel_Capacity_of_below_ground_tanks__c</fullName>
        <label>Capacity of below-ground tanks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>h_Fuel_condition__c</fullName>
        <label>Fuel condition</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Gas_certificate__c</fullName>
        <label>Valid gas certificate?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Gas_condition__c</fullName>
        <label>Gas condition</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Gas_service__c</fullName>
        <label>Site has gas service?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Sanitation__c</fullName>
        <label>Site Sanitation</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Sanitation_fem__c</fullName>
        <label>Feminine hygiene bins</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>h_Water_supply__c</fullName>
        <label>Water supply</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Ceilings__c</fullName>
        <label>Ceilings</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Communications_Systems__c</fullName>
        <label>Communications Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Elevators__c</fullName>
        <label>Elevators</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Interior_Decoration__c</fullName>
        <label>Interior Decoration</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Interior_Doors__c</fullName>
        <label>Interior Doors</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Interior_Stairs__c</fullName>
        <label>Interior Stairs</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Lighting_Fixtures__c</fullName>
        <label>Lighting Fixtures</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Pavement__c</fullName>
        <label>Pavement</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Windows_All_rescue_windows_openable__c</fullName>
        <label>All rescue windows openable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i_Windows__c</fullName>
        <label>Windows</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>premises_information_file_on_site__c</fullName>
        <label>premises information file on site?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Site Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Survey_Date__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Site_surveys</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Premises_Name__c</columns>
        <columns>Overall_building_rating__c</columns>
        <columns>Action_Points__c</columns>
        <columns>d_Contract_Status__c</columns>
        <columns>Survey_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Site surveys</label>
    </listViews>
    <listViews>
        <fullName>All_Site_surveys_WestMidlands</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>d_Contract_Annual_rent__c</columns>
        <columns>Premises_Name__c</columns>
        <columns>Overall_building_rating__c</columns>
        <columns>Action_Points__c</columns>
        <columns>d_Contract_Status__c</columns>
        <columns>Survey_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Site surveys - West Midlands</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>